detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.vb

Option Strict Off
Option Explicit On 




Module C154_Series
    '/****************************************************************************/
    '/*      Function  Declerations                                              */
    '/****************************************************************************/

    ' System##
    Declare Function c154_initial Lib "C154.dll" Alias "c154_initial" (ByRef CardID_InBit As Integer, ByVal Manual_ID As Short) As Short
    Declare Function c154_close Lib "C154.dll" Alias "c154_close" () As Short
    Declare Function c154_get_version Lib "C154.dll" Alias "c154_get_version" (ByVal card_id As Short, ByRef firmware_ver As Short, ByRef driver_ver As Integer, ByRef dll_ver As Integer) As Short
    Declare Function c154_set_security_key Lib "C154.dll" Alias "c154_set_security_key" (ByVal CardId As Short, ByVal old_secu_code As Short, ByVal new_secu_code As Short) As Short
    Declare Function c154_check_security_key Lib "C154.dll" Alias "c154_check_security_key" (ByVal CardId As Short, ByVal secu_code As Short) As Short
    Declare Function c154_reset_security_key Lib "C154.dll" Alias "c154_reset_security_key" (ByVal CardId As Short) As Short
    Declare Function c154_config_from_file Lib "C154.dll" Alias "c154_config_from_file" () As Short
    Declare Function c154_get_CardType Lib "C154.dll" Alias "c154_get_CardType" (ByVal CardId As Short, ByRef Type As Integer) As Short

    'Pulse Input/Output Configuration Section
    Declare Function c154_set_pls_outmode Lib "C154.dll" Alias "c154_set_pls_outmode" (ByVal AxisNo As Short, ByVal pls_outmode As Short) As Short
    Declare Function c154_set_pls_iptmode Lib "C154.dll" Alias "c154_set_pls_iptmode" (ByVal AxisNo As Short, ByVal pls_iptmode As Short, ByVal pls_logic As Short) As Short
    Declare Function c154_set_feedback_src Lib "C154.dll" Alias "c154_set_feedback_src" (ByVal AxisNo As Short, ByVal Src As Short) As Short

    'Velocity mode motion Section
    Declare Function c154_tv_move Lib "C154.dll" Alias "c154_tv_move" (ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
    Declare Function c154_sv_move Lib "C154.dll" Alias "c154_sv_move" (ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Short
    Declare Function c154_sd_stop Lib "C154.dll" Alias "c154_sd_stop" (ByVal AxisNo As Short, ByVal Tdec As Double) As Short
    Declare Function c154_emg_stop Lib "C154.dll" Alias "c154_emg_stop" (ByVal AxisNo As Short) As Short
    Declare Function c154_get_current_speed Lib "C154.dll" Alias "c154_get_current_speed" (ByVal AxisNo As Short, ByRef speed As Double) As Short
    Declare Function c154_speed_override Lib "C154.dll" Alias "c154_speed_override" (ByVal AxisNo As Short, ByVal NewVelPercent As Double, ByVal Time As Double) As Short
    Declare Function c154_set_max_override_speed Lib "C154.dll" Alias "c154_set_max_override_speed" (ByVal AxisNo As Short, ByVal OvrdSpeed As Double, ByVal Enable As Short) As Short

    'Single Axis Position Mode Section
    Declare Function c154_start_tr_move Lib "C154.dll" Alias "c154_start_tr_move" (ByVal AxisNo As Short, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_move Lib "C154.dll" Alias "c154_start_ta_move" (ByVal AxisNo As Short, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_move Lib "C154.dll" Alias "c154_start_sr_move" (ByVal AxisNo As Short, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_move Lib "C154.dll" Alias "c154_start_sa_move" (ByVal AxisNo As Short, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_set_move_ratio Lib "C154.dll" Alias "c154_set_move_ratio" (ByVal AxisNo As Short, ByVal move_ratio As Double) As Short

    'Two Axes Linear Interpolation function
    Declare Function c154_start_tr_move_xy Lib "C154.dll" Alias "c154_start_tr_move_xy" (ByVal CardNo As Short, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_tr_move_zu Lib "C154.dll" Alias "c154_start_tr_move_zu" (ByVal CardNo As Short, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_move_xy Lib "C154.dll" Alias "c154_start_ta_move_xy" (ByVal CardNo As Short, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_move_zu Lib "C154.dll" Alias "c154_start_ta_move_zu" (ByVal CardNo As Short, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_move_xy Lib "C154.dll" Alias "c154_start_sr_move_xy" (ByVal CardNo As Short, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sr_move_zu Lib "C154.dll" Alias "c154_start_sr_move_zu" (ByVal CardNo As Short, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_move_xy Lib "C154.dll" Alias "c154_start_sa_move_xy" (ByVal CardNo As Short, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_move_zu Lib "C154.dll" Alias "c154_start_sa_move_zu" (ByVal CardNo As Short, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short

    'Any 2 of former or later 4 axes linear interpolation function
    Declare Function c154_start_tr_line2 Lib "C154.dll" Alias "c154_start_tr_line2" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_line2 Lib "C154.dll" Alias "c154_start_ta_line2" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_line2 Lib "C154.dll" Alias "c154_start_sr_line2" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_line2 Lib "C154.dll" Alias "c154_start_sa_line2" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short

    'Any 3 of former or later 4 axes linear interpolation function
    Declare Function c154_start_tr_line3 Lib "C154.dll" Alias "c154_start_tr_line3" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_line3 Lib "C154.dll" Alias "c154_start_ta_line3" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_line3 Lib "C154.dll" Alias "c154_start_sr_line3" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_line3 Lib "C154.dll" Alias "c154_start_sa_line3" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short

    'Former or later 4 Axes linear interpolation function
    Declare Function c154_start_tr_line4 Lib "C154.dll" Alias "c154_start_tr_line4" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_line4 Lib "C154.dll" Alias "c154_start_ta_line4" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_line4 Lib "C154.dll" Alias "c154_start_sr_line4" (ByRef AxisArray As sAxisArray4, ByRef DistArray As sDistA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_line4 Lib "C154.dll" Alias "c154_start_sa_line4" (ByRef AxisArray As sAxisArray4, ByRef PosArray As sPosA4, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
